add updated project

--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
         <div class="projetos">
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="[link do projeto]" target="_blank">04. Website</a></h3>
+                    <h3><a href="https://medium.com/@fabitortorelli/building-knowledge-one-step-at-a-time-my-professional-portfolio-99fbb8fca292" target="_blank">04. Website</a></h3>
                     <img src="./img/diego-ph-fIq0tET6llw-unsplash.jpg" alt="website-img">
                 </div>
             </div>
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="[link do projeto]" target="_blank">05. In construction</a></h3>
+                    <h3><a href="[link do projeto]" target="_blank">05. Under construction</a></h3>
                     <img src="./img/danist-soh-8Gg2Ne_uTcM-unsplash.jpg" alt="inconstruction-img">
                 </div>
             </div>
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="[link do projeto]" target="_blank">06. In construction</a></h3>
+                    <h3><a href="[link do projeto]" target="_blank">06. Under construction</a></h3>
                     <img src="./img/danist-soh-8Gg2Ne_uTcM-unsplash.jpg" alt="inconstruction-img">
                 </div>
             </div>
