--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <section id="experience">
-        <h2>EXPERIENCE</h2><hr>
+        <h2>EXPERIENCES</h2><hr>
         <div class="container-experience">
         
         <div class="experience">
@@ -56,14 +56,14 @@
                 <div class="experience-text-info">
                     <h3>EDUCATION</h3>
                     <ul>
-                        <li>Master’s degree in Statistics
-                            <ul><li>2017-2020</li></ul>
+                        <li>Master’s degree, Statistics (2017-2020)
+                            <ul><li>Universidade de São Paulo/Universidade Federal de São Carlos</li></ul>
                         </li>
-                        <li>Student exchange program
-                            <ul><li>2013-2014</li></ul>
+                        <li>Student exchange program (2013-2014)
+                            <ul><li>State University of New York, University at Albany</li></ul>
                         </li>
-                        <li>Bachelor's degree in Mathematics
-                            <ul><li>2011-2016</li></ul>
+                        <li>Bachelor's degree, Mathematics (2011-2016)
+                            <ul><li>Universidade de São Paulo</li></ul>
                         </li>
                     </ul>
                 </div>
@@ -72,13 +72,9 @@
                 <div class="experience-text-info">
                     <h3>SKILLS</h3>
                     <ul>
-                        <li>Python, R, SAS, Excel, Power BI
-                        </li>
-                        <li>Data Science, Analytics, Machine Learning
-                        </li>
-                        <li>Storytelling, Reporting 
-                        </li>
-                        <li>Documenting, Delegating</li>
+
+                        Python | SAS (PROC SQL) | Excel | PySpark | Git | Presentation Skills (PowerPoint, Power BI) | Analytical Skills <br><br>
+Data Science | Machine Learning | Storytelling | Reporting | Documenting | Delegating
                     </ul>
                 </div>
             </div>
@@ -86,7 +82,7 @@
                 <div class="experience-text-info">
                     <h3>WORK EXPERIENCE</h3>
                     <ul>
-                        <li>Serasa Experian, Brazil (Feb 2022 - actual)
+                        <li>Serasa Experian, Brazil (Feb 2022 - Aug 2024)
                             <ul><li>Data Modeling Analyst Senior
                             </li></ul>
                         </li>
@@ -102,9 +98,9 @@
             </div>
         </div>
 
-        <div class="image">   
+  <!--       <div class="image">   
             <img src="./img/angelina-litvin-K3uOmmlQmOo-unsplash.jpg" alt="exp-img">
-        </div>
+        </div> -->
         </div>
     <a href="#menu" class="top">Back to Top</a>
     </section>
@@ -115,40 +111,40 @@
         <div class="projetos">
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="https://github.com/fabitortorelli/WebScraping" target=”_blank”>01. Web Scraping</a></h3>
-                    <img src="./img/markus-spiske-MI9-PY5cyNs-unsplash.jpg" alt="webscraping-img">
+                    <h3><a href="https://github.com/fabitortorelli/WebScraping" target=”_blank”>01. Web Scraping </h3>
+                    <img src="./img/markus-spiske-MI9-PY5cyNs-unsplash.jpg" alt="webscraping-img - picture from Markus Spliske (Unsplash)"></a>
                 </div>
             </div>
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="https://github.com/fabitortorelli/NHNES_CASE" target=”_blank”>02. Depression Disorder</a></h3>
-                    <img src="./img/stormseeker-rX12B5uX7QM-unsplash.jpg" alt="depression-img">
+                    <h3><a href="https://github.com/fabitortorelli/NHNES_CASE" target=”_blank”>02. Depression Disorder</h3>
+                    <img src="./img/stormseeker-rX12B5uX7QM-unsplash.jpg" alt="depression-img - picture from Stormseeker (Unsplash)"></a>
                 </div>
             </div>
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="https://github.com/fabitortorelli/Study_Project" target="_blank">03. Studies</a></h3>
-                    <img src="./img/kelly-sikkema-Kl1gC0ve620-unsplash.jpg" alt="studies-img">
+                    <h3><a href="https://github.com/fabitortorelli/Study_Project" target="_blank">03. Studies</h3>
+                    <img src="./img/kelly-sikkema-Kl1gC0ve620-unsplash.jpg" alt="studies-img - picture from Kelly Sikkema (Unsplash)"></a>
                 </div>
             </div>
         </div>
         <div class="projetos">
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="https://medium.com/@fabitortorelli/building-knowledge-one-step-at-a-time-my-professional-portfolio-99fbb8fca292" target="_blank">04. Website</a></h3>
-                    <img src="./img/diego-ph-fIq0tET6llw-unsplash.jpg" alt="website-img">
+                    <h3><a href="https://medium.com/@fabitortorelli/building-knowledge-one-step-at-a-time-my-professional-portfolio-99fbb8fca292" target="_blank">04. Website</h3>
+                    <img src="./img/diego-ph-fIq0tET6llw-unsplash.jpg" alt="website-img - picture from Diego PH (Unsplash)"></a>
                 </div>
             </div>
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="[link do projeto]" target="_blank">05. Under construction</a></h3>
-                    <img src="./img/danist-soh-8Gg2Ne_uTcM-unsplash.jpg" alt="inconstruction-img">
+                    <h3><a href="https://github.com/fabitortorelli/Retail-Company-Analysis" target="_blank">05. Retail Company Analysis</h3>
+                    <img src="./img/tim-mossholder-qh75QT91TfA-unsplash.jpg" alt="retail-company-img - picture from Tim Mossholder (Unsplash)<"></a>
                 </div>
             </div>
             <div class="projeto">
                 <div class="projeto-info">
-                    <h3><a href="[link do projeto]" target="_blank">06. Under construction</a></h3>
-                    <img src="./img/danist-soh-8Gg2Ne_uTcM-unsplash.jpg" alt="inconstruction-img">
+                    <h3><a href="https://github.com/fabitortorelli/Credit-Analysis" target="_blank">06. Credit Analysis</h3>
+                    <img src="./img/daniel-thomas-WmsFE6YhYIM-unsplash.jpg" alt="credit-img - picture from Daniel Thomas (Unsplash)"></a>
                 </div>
             </div>
         </div>
